--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,72 @@
 ﻿@page "/"
+@using Models
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Game Catalog</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Game Catalog</h1>
 
-Welcome to your new app.
+<table class="table table-striped table-hover table-bordered ">
+    <thead class="table-dark">
+        <th>Id</th>
+        <th>Name</th>
+        <th>Genre</th>
+        <th>Price</th>
+        <th>Release Date</th>
+        <th></th>
+    </thead>
+    <tbody>
+        @foreach (var game in games)
+        {
+            <tr class="pe-auto">
+                <td>@game.Id</td>
+                <td>@game.Name</td>
+                <td>@game.Genre</td>
+                <td>@game.Price</td>
+                <td>@game.ReleaseDate.ToString("MM/dd/yyyy")</td>
+                <td></td>
+            </tr>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+        }
+    </tbody>
+</table>
+
+
+@code {
+
+    private Game[] games = new[]
+    {
+new Game(){
+Id = 1,
+Name = "Tekken 8",
+Genre = "Fighting",
+Price = 89.99M,
+ReleaseDate = new DateTime(2024, 1, 26)
+},
+new Game(){
+Id = 1,
+Name = "Mario Kart 8",
+Genre = "Racing",
+Price = 49.99M,
+ReleaseDate = new DateTime(2014, 5, 19)
+
+},
+new Game(){
+Id = 1,
+Name = "Hogwarts Legacy",
+Genre = "Roleplaying",
+Price = 69.99M,
+ReleaseDate = new DateTime(2023, 2, 10)
+
+},
+
+new Game(){
+Id = 1,
+Name = "Final Fatnasy XIV",
+Genre = "Roleplaying",
+Price = 59.99M,
+ReleaseDate = new DateTime(2010, 9, 30)
+
+}
+
+};
+}
