--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,68 +5,48 @@
 
 <h1>Game Catalog</h1>
 
-<table class="table table-striped table-hover table-bordered ">
-    <thead class="table-dark">
-        <th>Id</th>
-        <th>Name</th>
-        <th>Genre</th>
-        <th>Price</th>
-        <th>Release Date</th>
-        <th></th>
-    </thead>
-    <tbody>
-        @foreach (var game in games)
-        {
-            <tr class="pe-auto">
-                <td>@game.Id</td>
-                <td>@game.Name</td>
-                <td>@game.Genre</td>
-                <td>@game.Price</td>
-                <td>@game.ReleaseDate.ToString("MM/dd/yyyy")</td>
-                <td></td>
-            </tr>
+@if (games is null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <table class="table table-striped table-hover table-bordered ">
+        <thead class="table-dark">
+            <th>Id</th>
+            <th>Name</th>
+            <th>Genre</th>
+            <th>Price</th>
+            <th>Release Date</th>
+            <th></th>
+        </thead>
+        <tbody>
+            @foreach (var game in games)
+            {
+                <tr class="pe-auto">
+                    <td>@game.Id</td>
+                    <td>@game.Name</td>
+                    <td>@game.Genre</td>
+                    <td>@game.Price €</td>
+                    <td>@game.ReleaseDate.ToString("MM/dd/yyyy")</td>
+                    <td></td>
+                </tr>
 
-        }
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+}
+
+
 
 
 @code {
 
-    private Game[] games = new[]
+    private Game[]? games;
+
+    protected override void OnInitialized()
     {
-new Game(){
-Id = 1,
-Name = "Tekken 8",
-Genre = "Fighting",
-Price = 89.99M,
-ReleaseDate = new DateTime(2024, 1, 26)
-},
-new Game(){
-Id = 1,
-Name = "Mario Kart 8",
-Genre = "Racing",
-Price = 49.99M,
-ReleaseDate = new DateTime(2014, 5, 19)
+        games = GameClient.GetGames();
+    }
 
-},
-new Game(){
-Id = 1,
-Name = "Hogwarts Legacy",
-Genre = "Roleplaying",
-Price = 69.99M,
-ReleaseDate = new DateTime(2023, 2, 10)
-
-},
-
-new Game(){
-Id = 1,
-Name = "Final Fatnasy XIV",
-Genre = "Roleplaying",
-Price = 59.99M,
-ReleaseDate = new DateTime(2010, 9, 30)
-
-}
-
-};
 }
