--- a/Pages/EditGame.razor
+++ b/Pages/EditGame.razor
@@ -10,14 +10,24 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <EditForm Model="@game" OnSubmit="HandleSumbit">
+        <EditForm Model="@game" OnValidSubmit="HandleSumbit">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="mb-3">
                 <label for="name" class="form-label">Name:</label>
                 <InputText id="name" @bind-Value="game.Name" class="form-control"></InputText>
             </div>
             <div class="mb-3">
                 <label for="genre" class="form-label">Genre:</label>
-                <InputText id="genre" @bind-Value="game.Genre" class="form-control"></InputText>
+                <InputSelect id="genre" @bind-Value="game.Genre" class="form-select">
+                    <option value="">Select Genre</option>
+                    <option value="Fighting">Fighting</option>
+                    <option value="Roleplaying">Roleplaying</option>
+                    <option value="Racing">Racing</option>
+                    <option value="MOBA">MOBA</option>
+                    <option value="Kids and Family">Kids and Family</option>
+                    <option value="Sports">Sports</option>
+                </InputSelect>
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Price:</label>
@@ -28,6 +38,7 @@
                 <InputDate id="releaseDate" @bind-Value="game.ReleaseDate" class="form-control"></InputDate>
             </div>
             <button class="btn btn-primary" type="submit">Save</button>
+            <button class="btn btn-danger" type="button" @onclick="HandleCancel">Cancel</button>
         </EditForm>
     </div>
 </div>
@@ -48,6 +59,11 @@
     private void HandleSumbit()
     {
         GameClient.AddGame(game);
+        NavigationManager.NavigateTo("/");
+    }
+
+    private void HandleCancel()
+    {
         NavigationManager.NavigateTo("/");
     }
 
