--- a/Pages/EditGame.razor
+++ b/Pages/EditGame.razor
@@ -1,64 +1,107 @@
 ﻿@page "/game"
+@page "/game/{id:int}"
 @using Models
 @inject NavigationManager NavigationManager
 
-<PageTitle>New Game</PageTitle>
+<PageTitle>@title</PageTitle>
 
 <h1>Game Catalog</h1>
 
-<h3>New Game</h3>
+<h3>@title</h3>
 
-<div class="row">
-    <div class="col-sm-4">
-        <EditForm Model="@game" OnValidSubmit="HandleSumbit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="mb-3">
-                <label for="name" class="form-label">Name:</label>
-                <InputText id="name" @bind-Value="game.Name" class="form-control"></InputText>
-            </div>
-            <div class="mb-3">
-                <label for="genre" class="form-label">Genre:</label>
-                <InputSelect id="genre" @bind-Value="game.Genre" class="form-select">
-                    <option value="">Select Genre</option>
-                    <option value="Fighting">Fighting</option>
-                    <option value="Roleplaying">Roleplaying</option>
-                    <option value="Racing">Racing</option>
-                    <option value="MOBA">MOBA</option>
-                    <option value="Kids and Family">Kids and Family</option>
-                    <option value="Sports">Sports</option>
-                </InputSelect>
-            </div>
-            <div class="mb-3">
-                <label for="price" class="form-label">Price:</label>
-                <InputNumber id="price" @bind-Value="game.Price" class="form-control"></InputNumber>
-            </div>
-            <div class="mb-3">
-                <label for="releaseDate" class="form-label">Release Date:</label>
-                <InputDate id="releaseDate" @bind-Value="game.ReleaseDate" class="form-control"></InputDate>
-            </div>
-            <button class="btn btn-primary" type="submit">Save</button>
-            <button class="btn btn-danger" type="button" @onclick="HandleCancel">Cancel</button>
-        </EditForm>
+@if (game is null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+
+    <div class="row">
+        <div class="col-sm-4">
+            <EditForm Model="@game" OnValidSubmit="HandleSumbit">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name:</label>
+                    <InputText id="name" @bind-Value="game.Name" class="form-control"></InputText>
+                </div>
+                <div class="mb-3">
+                    <label for="genre" class="form-label">Genre:</label>
+                    <InputSelect id="genre" @bind-Value="game.Genre" class="form-select">
+                        <option value="">Select Genre</option>
+                        <option value="Fighting">Fighting</option>
+                        <option value="Roleplaying">Roleplaying</option>
+                        <option value="Racing">Racing</option>
+                        <option value="MOBA">MOBA</option>
+                        <option value="Kids and Family">Kids and Family</option>
+                        <option value="Sports">Sports</option>
+                    </InputSelect>
+                </div>
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price:</label>
+                    <InputNumber id="price" @bind-Value="game.Price" class="form-control"></InputNumber>
+                </div>
+                <div class="mb-3">
+                    <label for="releaseDate" class="form-label">Release Date:</label>
+                    <InputDate id="releaseDate" @bind-Value="game.ReleaseDate" class="form-control"></InputDate>
+                </div>
+                <button class="btn btn-primary" type="submit">Save</button>
+                <button class="btn btn-danger" type="button" @onclick="HandleCancel">Cancel</button>
+            </EditForm>
+        </div>
     </div>
-</div>
-
+}
 
 
 
 
 @code {
 
-    private Models.Game game = new()
+    [Parameter]
+    public int? Id { get; set; }
+
+    private Models.Game? game;
+
+    private string title = string.Empty;
+
+    protected override void OnParametersSet()
+    {
+        if (Id is not null)
         {
-            Name = string.Empty,
-            Genre = string.Empty,
-            ReleaseDate = DateTime.Now
-        };
+            Game foundGame = GameClient.GetGame(Id.Value);
+            game = new()
+                {
+                    Id = foundGame.Id,
+                    Name = foundGame.Name,
+                    Genre = foundGame.Genre,
+                    Price = foundGame.Price,
+                    ReleaseDate = foundGame.ReleaseDate
+                };
+            title = $"Edit {game.Name}";
+        }
+        else
+        {
+            game = new()
+                {
+                    Name = string.Empty,
+                    Genre = string.Empty,
+                    ReleaseDate = DateTime.Now
+                };
+            title = "New game";
+        }
+    }
 
     private void HandleSumbit()
     {
-        GameClient.AddGame(game);
+        if (game!.Id == 0)
+        {
+            GameClient.AddGame(game);
+        }
+        else
+        {
+            GameClient.UpdateGame(game);
+        }
+
         NavigationManager.NavigateTo("/");
     }
 
