--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -36,7 +36,10 @@ else
                     <td>@game.Genre</td>
                     <td>@game.Price €</td>
                     <td>@game.ReleaseDate.ToString("MM/dd/yyyy")</td>
-                    <td></td>
+                    <td><button class="btn btn-primary" @onclick="(() => EditGame(game.Id))">
+                            <i class="oi oi-pencil"></i>
+                        </button>
+                    </td>
                 </tr>
 
             }
@@ -59,6 +62,11 @@ else
     private void CreateGame()
     {
         NavigationManager.NavigateTo("/game");
+    }
+
+    private void EditGame(int id)
+    {
+        NavigationManager.NavigateTo($"/game/{id}");
     }
 
 }
