--- a/Pages/DeleteGame.razor
+++ b/Pages/DeleteGame.razor
@@ -7,12 +7,10 @@
                 <h5 class="modal-title" id="deleteModalLabel">@title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger">Delete</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    @onclick="Cancel">Cancel</button>
+                <button type="button" data-bs-dismiss="modal" class="btn btn-danger" @onclick="Confirm">Delete</button>
             </div>
         </div>
     </div>
