--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -18,6 +18,11 @@
 }
 else
 {
+
+    <DeleteGame Game="@currentGame" OnClose="@OnDeleteModalClose">
+
+    </DeleteGame>
+
     <table class="table table-striped table-hover table-bordered ">
         <thead class="table-dark">
             <th>Id</th>
@@ -39,6 +44,10 @@ else
                     <td><button class="btn btn-primary" @onclick="(() => EditGame(game.Id))">
                             <i class="oi oi-pencil"></i>
                         </button>
+                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                            @onclick="(() => currentGame = game )">
+                            <i class="oi oi-x"></i>
+                        </button>
                     </td>
                 </tr>
 
@@ -53,6 +62,7 @@ else
 @code {
 
     private Game[]? games;
+    private Game? currentGame;
 
     protected override void OnInitialized()
     {
@@ -69,4 +79,13 @@ else
         NavigationManager.NavigateTo($"/game/{id}");
     }
 
+    private void OnDeleteModalClose(bool accepted)
+    {
+        if (accepted)
+        {
+            GameClient.DeleteGame(currentGame!.Id);
+            games = GameClient.GetGames();
+        }
+
+    }
 }
